--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -202,6 +202,21 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Merge Intervals II",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/problems/scaler/1-D_Array/Merge_Intervals_II.js",
+      "args": [],
+      "console": "integratedTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"],
+      "runtimeExecutable": "${env:HOME}/.nvm/versions/node/v22.12.0/bin/node",
+      "env": {
+        "NODE_ENV": "development"
+      },
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Launch Max Subarray Sum",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/problems/scaler/1-D_Array/Max_Subarray_Sum.js",
