--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,27 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Sum_of_Pair_k_II",
+      "request": "launch",
+      "mainClass": "com.dsa.problems.two_pointers.Sum_of_Pair_k_II",
+      "projectName": "dsa-practice"
+    },
+    {
+      "type": "java",
+      "name": "Subarray_Sum_K",
+      "request": "launch",
+      "mainClass": "com.dsa.problems.two_pointers.Subarray_Sum_K",
+      "projectName": "dsa-practice"
+    },
+    {
+      "type": "java",
+      "name": "Max_Continuous_Series_of_1s",
+      "request": "launch",
+      "mainClass": "com.dsa.problems.two_pointers.Max_Continuous_Series_of_1s",
+      "projectName": "dsa-practice"
+    },
+    {
+      "type": "java",
       "name": "Check_Pair_Diff_II",
       "request": "launch",
       "mainClass": "com.dsa.problems.two_pointers.Check_Pair_Diff_II",
